updated newinstance